--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <canvas id="myCanvas" width="500" height="500"></canvas>
-<script src="game.js"></script>
+<script src="js/game.js"></script>
 
 </body>
 </html>
